One issue: Vertical align #container

--- a/site-theme/site/less/style.less
+++ b/site-theme/site/less/style.less
@@ -22,6 +22,25 @@ body {
 	background: url(../img/logo-bg.png) no-repeat 50% 50%, radial-gradient(50% 50%, rgba(29, 35, 58, 0.50), rgba(22, 26, 46, 0.30)), url(../img/tiles.jpg);
 	min-width: 1000px;
 }
+
+#container {
+	@containerHeight:768px; @containerWidth:960px;
+	
+	height: @containerHeight; width: @containerWidth;
+	margin: 0 auto;
+	position: relative;
+}
+
+#main {
+	position: relative;
+	height: 470px;width: 890px;
+	padding: 0 70px;
+	color: #fff;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+
 header ul {
 	position: absolute;
 	right: 0;
@@ -60,20 +79,7 @@ h2 {
 	color: @colorAmarelo;
 }
 
-#container {
-	height: 768px; width: 960px;
-	margin: 0 auto;
-	position: relative;
-}
 
-#main {
-	position: relative;
-	height: 470px;width: 890px;
-	padding: 0 70px;
-	color: #fff;
-	display: table-cell;
-	vertical-align: middle;
-}
 
 .address li,
 p {
@@ -202,6 +208,11 @@ p {
 	}
 }
 
+#not-found {
+	text-align: right;
+ 	h2 { font-size: 72px; }
+	 p { font-size: 32px; }
+}
 
 /* End: Landing Page setup */
 
@@ -318,5 +329,17 @@ body#blog .blog a,
 		font-weight: 400;
 	}
 }*/
+
+#language-selector { margin:10px 0 0 0; padding:0; position: absolute; float: right; display: block; right: 0; z-index: 11 }
+#language-selector li { display: inline-block; }
+#language-selector li:first-child { border-right: 1px solid white; overflow: auto }
+
+#language-selector input[type=submit] {
+	background-color: transparent;
+	border: none;
+	color: white;
+	text-transform: uppercase;
+	font-size: 10px;
+}
 
 @import "html5boilerplate-outro.less";
